force-app/main/default/objects/Product2/fields/Associated_Product_for_Discount__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product_for_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Product for Discount</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Associated Product for Discount)</relationshipLabel>
    <relationshipName>AssociatedProductforDiscount</relationshipName>
    <type>Lookup</type>
</CustomField>