force-app/main/default/objects/Product2/fields/Award_Year__c.field-meta.xml
<CustomField>
    <fullName>Award_Year__c</fullName>
    <label>Award Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>