force-app/main/default/objects/Product2/fields/Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Base_Product__c</fullName>
    <description>The product&apos;s most basic form (Profile, E-reprint, Listing, Package, Etc.)</description>
    <inlineHelpText>The product&apos;s most basic form. (Profile, E-reprint, Listing, Package, Etc.) To simplify list views and reporting.</inlineHelpText>
    <label>Base Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>