force-app/main/default/objects/Product2/fields/CC_Editor_Product__c.field-meta.xml
<CustomField>
    <fullName>CC_Editor_Product__c</fullName>
    <label>CC Editor Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>