force-app/main/default/objects/Product2/fields/Change_For__c.field-meta.xml
<CustomField>
    <fullName>Change_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change For</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Change For)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>