force-app/main/default/objects/Product2/fields/Charge_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Charge_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Shipping</label>
    <type>Checkbox</type>
</CustomField>