force-app/main/default/objects/Product2/fields/Collect_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>Collect_Content_ID__c</fullName>
    <label>Collect Content ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>