force-app/main/default/objects/Product2/fields/CreateOrderFulfillment__c.field-meta.xml
<CustomField>
    <fullName>CreateOrderFulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateOrderFulfillment</label>
    <type>Checkbox</type>
</CustomField>