force-app/main/default/objects/Product2/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1.</description>
    <inlineHelpText>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</inlineHelpText>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>