force-app/main/default/objects/Product2/fields/Discount_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Discount_Frequency__c</fullName>
    <description>Frequency of subscription discount used for subscription automation process</description>
    <inlineHelpText>Frequency of subscription discount used for subscription automation process</inlineHelpText>
    <label>Discount Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>