force-app/main/default/objects/Product2/fields/Discount_SKU__c.field-meta.xml
<CustomField>
    <fullName>Discount_SKU__c</fullName>
    <label>Discount SKU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>