force-app/main/default/objects/Product2/fields/DSR_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>DSR_Product_Category__c</fullName>
    <description>Used for Reporting Due to complexities with default categories and package manager flow</description>
    <inlineHelpText>Used for reporting</inlineHelpText>
    <label>DSR Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Host Digital Media</fullName>
            </value>
            <value>
                <fullName>Host Digital Tools</fullName>
            </value>
            <value>
                <fullName>Host MPS</fullName>
            </value>
            <value>
                <fullName>Host Print Media</fullName>
            </value>
            <value>
                <fullName>Special Digital Media</fullName>
            </value>
            <value>
                <fullName>Special Digital Tools</fullName>
            </value>
            <value>
                <fullName>Special MPS</fullName>
            </value>
            <value>
                <fullName>Special Print Media</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Other</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Print</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Digital</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Print Retention</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Other Retention</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Digital Retention</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Print Renewal</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Other Renewal</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Digital Renewal</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Setup Fee/Marketing Discounts</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Print Monthly</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Print Annual</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Digital Monthly</fullName>
            </value>
            <value>
                <fullName>Marketing Services-Digital Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>