force-app/main/default/objects/Product2/fields/Ecom_Discount_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Discount_Opp_Name__c</fullName>
    <inlineHelpText>If this Product is ordered in the webapp, the webapp will create or get the Opportunity named the Ecom Discount Opp Name and place the product on a Sales Order for that Opportunity.</inlineHelpText>
    <label>Ecom Opp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>