force-app/main/default/objects/Product2/fields/HideProduct__c.field-meta.xml
<CustomField>
    <fullName>HideProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kugamon Project FS04 - Replaced with Additional Product Info &apos;Hide&apos; field. Okay to Delete.</description>
    <inlineHelpText>Hides Product in Manage Lines</inlineHelpText>
    <label>Hide Product (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>