force-app/main/default/objects/Product2/fields/Intacct_Sku__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Sku__c</fullName>
    <label>Intacct Sku</label>
    <length>25</length>
    <type>Text</type>
</CustomField>