force-app/main/default/objects/Product2/fields/Is_Change_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Change_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change Product</label>
    <type>Checkbox</type>
</CustomField>