force-app/main/default/objects/Product2/fields/Is_Kit_Bundle_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Kit_Bundle_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Kit Bundle Member</label>
    <type>Checkbox</type>
</CustomField>