force-app/main/default/objects/Product2/fields/Is_Subscription_Addon__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscription_Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subscription Add On</label>
    <type>Checkbox</type>
</CustomField>