force-app/main/default/objects/Product2/fields/IsKitBundle__c.field-meta.xml
<CustomField>
    <fullName>IsKitBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unchecked disables Kit/Bundle function and deletes all Kit/Bundle members.</description>
    <inlineHelpText>Unchecked disables Kit/Bundle function and deletes all Kit/Bundle members.</inlineHelpText>
    <label>Kit/Bundle</label>
    <type>Checkbox</type>
</CustomField>