force-app/main/default/objects/Product2/fields/Magazine_Type__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Type__c</fullName>
    <label>Magazine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essential Living</fullName>
            </value>
            <value>
                <fullName>Escapes and Experiences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>