force-app/main/default/objects/Product2/fields/Managed_Package__c.field-meta.xml
<CustomField>
    <fullName>Managed_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed Package</label>
    <type>Checkbox</type>
</CustomField>