force-app/main/default/objects/Product2/fields/Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity__c</fullName>
    <description>Sets the maximum Quantity value limit in Quote and Order configurator page.</description>
    <inlineHelpText>Sets the maximum Quantity value limit in Quote and Order configurator page.</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>