force-app/main/default/objects/Product2/fields/No_Fee_Plan__c.field-meta.xml
<CustomField>
    <fullName>No_Fee_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Fee Plan</label>
    <type>Checkbox</type>
</CustomField>