force-app/main/default/objects/Product2/fields/Product_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Display_Name__c</fullName>
    <description>This field is used to &apos;override&apos; the product name when displaying inside the My Orders environment. If not data is in this field, the Product Name will be displayed. If data is in this field, the Product Display Name will be displayed.</description>
    <inlineHelpText>This field is used to &apos;override&apos; the product name when displaying inside the My Orders environment. If not data is in this field, the Product Name will be displayed. If data is in this field, the Product Display Name will be displayed.</inlineHelpText>
    <label>Product Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>