force-app/main/default/objects/Product2/fields/Product_Information_Web__c.field-meta.xml
<CustomField>
    <fullName>Product_Information_Web__c</fullName>
    <description>product info that shows on the my orders page exactly as it&apos;s seen here</description>
    <inlineHelpText>product info that shows on the my orders page exactly as it&apos;s seen here</inlineHelpText>
    <label>Product Information Web</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>