force-app/main/default/objects/Product2/fields/Product_Support_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Support_Link_1__c</fullName>
    <description>Link displayed in the Product Support section of Get Started in the webapp.</description>
    <inlineHelpText>Link displayed in the Product Support section of Get Started in the webapp. This must be a valid HTML anchor tag. This is not an Url.</inlineHelpText>
    <label>Product Support Link 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>