force-app/main/default/objects/Product2/fields/Related_Fulfillment_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Fulfillment_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Fulfillment Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Related Fulfillment Product)</relationshipLabel>
    <relationshipName>Products3</relationshipName>
    <type>Lookup</type>
</CustomField>