force-app/main/default/objects/Product2/fields/Renewal_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Frequency__c</fullName>
    <label>Renewal Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>