force-app/main/default/objects/Product2/fields/Renewal_Product__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the renewal product that should be used in the recurring subscription orders</description>
    <inlineHelpText>This field shows the renewal product that should be used in the recurring subscription orders</inlineHelpText>
    <label>Renewal Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>