force-app/main/default/objects/Product2/fields/SalesInstruction__c.field-meta.xml
<CustomField>
    <fullName>SalesInstruction__c</fullName>
    <label>Sales Instruction</label>
    <type>TextArea</type>
</CustomField>