force-app/main/default/objects/Product2/fields/Sample_Product__c.field-meta.xml
<CustomField>
    <fullName>Sample_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Product</label>
    <type>Checkbox</type>
</CustomField>