force-app/main/default/objects/Product2/fields/Set_Up_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine when a recurring subscription should be set up for a product</description>
    <inlineHelpText>This field is used to determine when a recurring subscription should be set up for a product</inlineHelpText>
    <label>Set Up Subscription</label>
    <type>Checkbox</type>
</CustomField>