force-app/main/default/objects/Product2/fields/Slide_Show_Url__c.field-meta.xml
<CustomField>
    <fullName>Slide_Show_Url__c</fullName>
    <description>Url of the slide show displayed on the Get Started page in the webapp.</description>
    <inlineHelpText>Url of the slide show displayed on the Get Started page in the webapp.</inlineHelpText>
    <label>Slide Show Url</label>
    <type>Url</type>
</CustomField>