force-app/main/default/objects/Product2/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this product a subscription product?</description>
    <inlineHelpText>Is this product a subscription product?</inlineHelpText>
    <label>Subscription</label>
    <type>Checkbox</type>
</CustomField>