force-app/main/default/objects/Product2/fields/Subscription_Product__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Subscription Product)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>