force-app/main/default/objects/Product2/fields/TaxableExcise__c.field-meta.xml
<CustomField>
    <fullName>TaxableExcise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable Excise</label>
    <type>Checkbox</type>
</CustomField>