force-app/main/default/objects/Product2/fields/TaxableSale__c.field-meta.xml
<CustomField>
    <fullName>TaxableSale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable Sale</label>
    <type>Checkbox</type>
</CustomField>