force-app/main/default/objects/Product2/fields/TaxableUsage__c.field-meta.xml
<CustomField>
    <fullName>TaxableUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable Usage</label>
    <type>Checkbox</type>
</CustomField>