force-app/main/default/objects/Product2/fields/TaxableVAT__c.field-meta.xml
<CustomField>
    <fullName>TaxableVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable VAT</label>
    <type>Checkbox</type>
</CustomField>