force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Intacct_Sku__c</columns>
    <columns>Discount_SKU__c</columns>
    <columns>HideProduct__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>