force-app/main/default/objects/Product2/listViews/Digital_Ads.listView-meta.xml
<ListView>
    <fullName>Digital_Ads</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Base_Product__c</columns>
    <columns>DSR_Product_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Digital ad</value>
    </filters>
    <label>Digital Ads</label>
</ListView>