force-app/main/default/objects/Product2/listViews/Essential_Living.listView-meta.xml
<ListView>
    <fullName>Essential_Living</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Base_Product__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>Discount_SKU__c</columns>
    <columns>DSR_Product_Category__c</columns>
    <columns>Intacct_Sku__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>essential living</value>
    </filters>
    <label>Essential Living</label>
</ListView>