force-app/main/default/objects/Product2/listViews/Managed_Social_Products.listView-meta.xml
<ListView>
    <fullName>Managed_Social_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Base_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Essential experience</value>
    </filters>
    <label>Essential Experiences</label>
</ListView>