force-app/main/default/objects/Product2/listViews/NAMS_products.listView-meta.xml
<ListView>
    <fullName>NAMS_products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Marketing Services</value>
    </filters>
    <filters>
        <field>PRODUCT2.DESCRIPTION</field>
        <operation>notContain</operation>
        <value>Essential Home</value>
    </filters>
    <label>NAMS products</label>
    <language>en_US</language>
</ListView>