force-app/main/default/objects/Product2/listViews/Newsletters.listView-meta.xml
<ListView>
    <fullName>Newsletters</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Newsletter</value>
    </filters>
    <label>Newsletters</label>
</ListView>