force-app/main/default/objects/Product2/listViews/Recently_created_products.listView-meta.xml
<ListView>
    <fullName>Recently_created_products</fullName>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Intacct_Sku__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/30/2020 12:00 AM</value>
    </filters>
    <label>Recently created products</label>
</ListView>